# griphin

./: .gitignore  CONTRIBUTING.md  README.md  run_ppr.sh  run_shadow_preproc.sh  run_shadow_train.sh
baseline/: README.md
data_generation/: edge_generate.py  edge_generate2.py  gen_engine_data.py  ogbn_generate.py  run.sh  (+3 more)
engine/: CMakeLists.txt  EdgeProp.cpp  EdgeProp.h  Graph.cpp  Graph.h  PPR.cpp  PPR.h  SharedIndices.h  SharedMemVector.cpp  SharedMemVector.h  SharedMemoryVector.cpp  SharedMemoryVector.h  VertexProp.cpp  VertexProp.h  bindings.cpp  global.h  main.cpp  out  ppr.cpp  ppr.h  setup.py  test.cpp  try  utils.h
engine/files/: p0_edge_dests.txt  p0_edge_sources.txt  p0_halo_shards.txt  p0_ids.txt  p1_edge_dests.txt  p1_edge_sources.txt  p1_halo_shards.txt  p1_ids.txt  p2_edge_dests.txt  p2_edge_sources.txt  p2_halo_shards.txt  p2_ids.txt  p3_edge_dests.txt  p3_edge_sources.txt  p3_halo_shards.txt  p3_ids.txt  partition_book.txt
engine/graph_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
engine/ogbn_files_txt_small/: p0_edge_dests.txt  p0_edge_sources.txt  p0_halo_shards.txt  p0_ids.txt  p1_halo_shards.txt  p1_ids.txt  p2_halo_shards.txt  p2_ids.txt  p3_halo_shards.txt  p3_ids.txt  partition_book.txt
engine/ogbn_small_csr_format/: csr_indices0.txt  csr_indices1.txt  csr_indptr0.txt  csr_indptr1.txt  csr_indptr2.txt  csr_indptr3.txt  csr_shards0.txt  csr_shards1.txt  csr_shards2.txt  csr_shards3.txt  p0_halo_shards.txt  p0_ids.txt  p1_halo_shards.txt  p1_ids.txt  p2_halo_shards.txt  p2_ids.txt  p3_halo_shards.txt  p3_ids.txt  partition_book.txt
(+67 files in other folders)
